Opened 12 years ago

Closed 12 years ago

#3749 closed defect (fixed)

segment with segment_time_delta cause the first file empty.

Reported by: Ching Yi, Chan Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: hls segment
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

Summary of the bug:

I try to make hls segment with the segment_time_delta parameter,
and found the size of 1st file is always 0.

How to reproduce:

% qty:Downloads qrtt1$ /Users/qrtt1/temp/FFmpeg/ffmpeg -i FOOO.ts -codec copy  -map 0 -f segment -segment_list_type m3u8 -segment_time_delta 11 -segment_list foo.mp4.m3u8 foo.mp4%05d.ts
ffmpeg version N-64303-g3f42434 Copyright (c) 2000-2014 the FFmpeg developers
  built on Jun 29 2014 23:10:40 with Apple LLVM version 5.1 (clang-503.0.40) (based on LLVM 3.4svn)
  configuration: --prefix=/Users/qrtt1/temp/FFmpeg/OUT
  libavutil      52. 90.101 / 52. 90.101
  libavcodec     55. 68.100 / 55. 68.100
  libavformat    55. 44.100 / 55. 44.100
  libavdevice    55. 13.101 / 55. 13.101
  libavfilter     4.  9.100 /  4.  9.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
[h264 @ 0x7fca1a008000] non-existing SPS 0 referenced in buffering period
    Last message repeated 1 times
Input #0, mpegts, from 'FOOO.ts':
  Duration: 00:01:16.08, start: 1.400000, bitrate: 6620 kb/s
  Program 1
    Metadata:
      service_name    : Service01
      service_provider: FFmpeg
    Stream #0:0[0x100]: Video: h264 (High) ([27][0][0][0] / 0x001B), yuv420p(tv, bt709), 1280x720 [SAR 1:1 DAR 16:9], 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
    Stream #0:1[0x101](jan): Audio: aac ([15][0][0][0] / 0x000F), 48000 Hz, stereo, fltp, 129 kb/s
[segment @ 0x7fca1a029800] Using AVStream.codec.time_base as a timebase hint to the muxer is deprecated. Set AVStream.time_base instead.
    Last message repeated 1 times
[mpegts @ 0x7fca1a02b600] Using AVStream.codec.time_base as a timebase hint to the muxer is deprecated. Set AVStream.time_base instead.
    Last message repeated 1 times
Output #0, segment, to 'foo.mp4%05d.ts':
  Metadata:
    encoder         : Lavf55.44.100
    Stream #0:0: Video: h264 ([27][0][0][0] / 0x001B), yuv420p, 1280x720 [SAR 1:1 DAR 16:9], q=2-31, 29.97 fps, 29.97 tbn, 29.97 tbc
    Stream #0:1(jan): Audio: aac ([15][0][0][0] / 0x000F), 48000 Hz, stereo, 129 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (copy)
  Stream #0:1 -> #0:1 (copy)
Press [q] to stop, [?] for help
[NULL @ 0x7fca1a008000] non-existing SPS 0 referenced in buffering period
[mpegts @ 0x7fca1a02b600] Using AVStream.codec.time_base as a timebase hint to the muxer is deprecated. Set AVStream.time_base instead.
    Last message repeated 5 times
qty:Downloads qrtt1$ ls -alh|grep foo|head
-rw-r--r--   1 qrtt1  staff   1.6K  6 30 00:29 foo.mp4.m3u8
-rw-r--r--   1 qrtt1  staff     0B  6 30 00:29 foo.mp400000.ts
-rw-r--r--   1 qrtt1  staff    30K  6 30 00:29 foo.mp400001.ts
-rw-r--r--   1 qrtt1  staff    99K  6 30 00:29 foo.mp400002.ts
-rw-r--r--   1 qrtt1  staff    60K  6 30 00:29 foo.mp400003.ts
-rw-r--r--   1 qrtt1  staff   689K  6 30 00:29 foo.mp400004.ts
-rw-r--r--   1 qrtt1  staff   595K  6 30 00:29 foo.mp400005.ts
-rw-r--r--   1 qrtt1  staff   500K  6 30 00:29 foo.mp400006.ts
-rw-r--r--   1 qrtt1  staff   1.5M  6 30 00:29 foo.mp400007.ts
-rw-r--r--   1 qrtt1  staff   2.6M  6 30 00:29 foo.mp400008.ts

The file foo.mp400000.ts with duration 0, it will cause play failure:

qty:Downloads qrtt1$ head -10 foo.mp4.m3u8
#EXTM3U
#EXT-X-VERSION:3
#EXT-X-MEDIA-SEQUENCE:0
#EXT-X-ALLOW-CACHE:YES
#EXT-X-TARGETDURATION:3
#EXTINF:0.000000,
foo.mp400000.ts
#EXTINF:0.066733,
foo.mp400001.ts
#EXTINF:0.200200,

Change History (1)

comment:1 by Stefano Sabatini, 12 years ago

Analyzed by developer: set
Reproduced by developer: set
Resolution: fixed
Status: newclosed

Should be fixed in:

commit 713157484a101d0fba92420c9d62d711f2f0012b
Author: Stefano Sabatini <stefasab@gmail.com>
Date:   Thu Jul 17 20:28:40 2014 +0200

    lavf/segment: do not allow to create segments with no key-frames
    
    Fix trac ticket #3749.
Note: See TracTickets for help on using tickets.