lavf/segment: do not allow to create segments with no key-frames

Fix trac ticket #3749.